<resources>
    <string name="app_name">Cloudpos</string>

    <string name="main_home">首页</string>
    <string name="main_shop">商城</string>
    <string name="main_service">服务</string>
    <string name="main_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_car_service">车务服务</string>
    <string name="home_recommend_service">推荐服务</string>
    <string name="home_recommend_good">推荐商品</string>
    <string name="item_ins">一键投保</string>
    <string name="login_co_name">云码通保险云服务平台</string>
    <string name="login_acc">账户</string>
    <string name="login_passwd">密码</string>

    <string name="btn_login">登录</string>
    <string name="btn_pay_now">立即支付</string>
    <string name="btn_sub_order">提交订单</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_next_step">下一步</string>
    <string name="btn_confirm_withdrawcash">确认提现</string>
    <string name="btn_pay">去支付</string>
    <string name="tv_forget_passwd">忘记密码</string>
    <string name="tvInputAcc">请输入您的账户</string>
    <string name="tvGetSMS">获取验证码</string>
    <string name="et_phone_input">请输入手机号</string>
    <string name="et_sms_input">请输入短信验证码</string>
    <string name="et_password_input">请设置新密码</string>
    <string name="btn_finish">完成</string>
    <string name="tv_most_select">最多只能选3个保险公司</string>

    <string name="mustUpload">(必须传)</string>
</resources>
