<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
      android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:src="@mipmap/logo"/>
        <TextView
            android:paddingTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/login_co_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="60dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_edittext">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/pic_people"/>
            <EditText
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_acc"
                android:background="@null"
                android:inputType="number"
                android:textSize="18sp"
                android:maxLength="15"
                android:maxLines="1"
                android:textCursorDrawable="@color/black"
                android:textColorHint="@color/gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_edittext">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/pic_pass"/>
            <EditText
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_passwd"
                android:background="@null"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:textCursorDrawable="@color/black"
                android:textColorHint="@color/gray"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="40dp">
            <TextView
                android:id="@+id/tv_forgetPasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:text="@string/tv_forget_passwd"/>
        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/btn_selector"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/btn_login"/>
    </LinearLayout>

</LinearLayout>
