<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:indicator_margin="5dp"
            />
    </LinearLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/white">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/alpaha_gray"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/gray"
                    android:text="@string/home_car_service"
                    />
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/alpaha_gray"
                    />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                >
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/white">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/alpaha_gray"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/gray"
                    android:text="@string/home_recommend_service"
                    />
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/alpaha_gray"
                    />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewRecommend"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/white">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/alpaha_gray"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/gray"
                    android:text="@string/home_recommend_good"
                    />
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:background="@color/alpaha_gray"
                    />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewRecommendGood"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
